<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:src="@drawable/mapimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <View
        android:id="@+id/view3"
        android:layout_width="109dp"
        android:layout_height="35dp"
        android:background="@drawable/new_view_bg"
        app:layout_constraintBottom_toBottomOf="@+id/imgView"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95">

    </View>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/location_icon"
        android:elevation="100dp"
        android:fontFamily="@font/sofia_pro"
        android:gravity="center"
        android:paddingStart="10dp"
        android:text="@string/edit_map"
        android:textColor="@color/dark_jungle_green"
        android:textSize="13sp"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/view3"
        tools:ignore="RtlSymmetry,UseCompatTextViewDrawableXml">

    </TextView>

    <TextView
        android:elevation="100dp"
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/sel_loc"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:elevation="100dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/map_address"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/head" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle_loc"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="22dp"
        android:layout_height="34dp"
        android:layout_marginBottom="2dp"
        android:src="@drawable/location"
        app:layout_constraintBottom_toBottomOf="@+id/imgView"
        app:layout_constraintEnd_toEndOf="@+id/imgView"
        app:layout_constraintStart_toStartOf="@+id/imgView"
        app:layout_constraintTop_toTopOf="@+id/imgView">

    </ImageView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/loc_affect"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

    </ImageView>

    <View
        android:id="@+id/text_bg"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@drawable/text_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView">
    </View>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofia_pro"
        android:paddingHorizontal="20sp"
        android:text="@string/detail"
        android:textColor="@color/caput_mortu"
        app:layout_constraintBottom_toBottomOf="@+id/text_bg"
        app:layout_constraintEnd_toEndOf="@+id/text_bg"
        app:layout_constraintStart_toStartOf="@+id/text_bg"
        app:layout_constraintTop_toTopOf="@+id/text_bg">
    </TextView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sofia_pro"
        android:text="@string/n_560008"
        android:textColor="@color/dark_jungle_green"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/flat_num"
        app:layout_constraintStart_toStartOf="@+id/flat_num"
        app:layout_constraintTop_toBottomOf="@+id/text_bg">

    </TextView>

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/sofia_pro"
        android:text="@string/pin_code"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8">

    </TextView>


    <EditText
        android:id="@+id/flat_num"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:paddingStart="17sp"
        android:hint="@string/flat_no_floor"
        android:fontFamily="@font/sofia_pro"
        android:textSize="13sp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_bg"
        app:layout_constraintVertical_bias="0.15"
        tools:ignore="RtlSymmetry">

    </EditText>


    <EditText
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="17dp"
        android:paddingStart="17sp"
        android:textSize="13sp"
        android:hint="@string/address_1"
        android:fontFamily="@font/sofia_pro"
        android:layout_marginEnd="17dp"
        android:background="@drawable/edit_text_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flat_num"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="RtlSymmetry">

    </EditText>


    <EditText
        android:background="@drawable/edit_text_bg"
        android:id="@+id/landmark"
        android:layout_width="0dp"
        android:textSize="13sp"
        android:layout_height="44dp"
        android:paddingStart="17sp"
        android:hint="@string/landmark"
        android:fontFamily="@font/sofia_pro"
        android:layout_marginStart="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="0.05"
        tools:ignore="RtlSymmetry">

    </EditText>


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/location_type"
        android:textColor="@color/taupe_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/landmark"
        app:layout_constraintTop_toBottomOf="@+id/landmark"
        app:layout_constraintVertical_bias="0.100000024">

    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/sofia_pro"
        android:gravity="center"
        android:paddingStart="10dp"
        android:text="@string/home"
        android:textColor="@color/liver"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:ignore="RtlSymmetry"
        app:drawableLeftCompat="@drawable/home_run">

    </TextView>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/sofia_pro"
        android:gravity="center"
        android:paddingStart="10dp"
        android:text="@string/work"
        android:textColor="@color/liver"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="RtlSymmetry"
        app:drawableStartCompat="@drawable/portfolio">

    </TextView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:fontFamily="@font/sofia_pro"
        android:gravity="center"
        android:paddingStart="10dp"
        android:text="@string/other"
        android:textColor="@color/liver"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:drawableLeftCompat="@drawable/placeholder"
        tools:ignore="RtlSymmetry">

    </TextView>

    <View
        android:id="@+id/view"
        android:layout_width="93dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/view_bg"
        app:layout_constraintBottom_toTopOf="@+id/saveAdd"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

    </View>

    <View
        android:id="@+id/view2"
        android:layout_width="93dp"
        android:layout_height="29dp"
        android:background="@drawable/view_bg"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/view5"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view">

    </View>

    <View
        android:id="@+id/view5"
        android:layout_width="93dp"
        android:layout_height="29dp"
        android:background="@drawable/view_bg"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@id/landmark"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveAdd"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/black_btn_bg"
        android:fontFamily="@font/sofia_pro"
        android:text="@string/address"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="300dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>